fix screen transition animation also added client command stuff tested with a demo screen in the testmod